--- a/css/style.scss
+++ b/css/style.scss
@@ -1,10 +1,114 @@
+@import url('http://fonts.cdnfonts.com/css/red-hat-display');
 $primary: #D4ECDD;
 $secondary: #345B63;
 $tertiary: #152D35;
 $background: #112031;
+$font-family: "Red Hat Display", sans-serif;
+
+body{
+    font-family: $font-family;
+}
 nav{
     .active {
         background-color: $secondary;
     }
 }
-
+footer{
+    background-color: $tertiary;
+    color: $primary;
+}
+h1{
+    color: $primary;
+    -webkit-text-stroke: medium;
+    font-size: 120px;
+    letter-spacing: 3px;
+}
+h2{
+    -webkit-text-stroke: medium;
+    font-size: 100px;
+    letter-spacing: 3px;
+}
+span{
+    -webkit-text-stroke: 0;
+    font-size: 80px;
+}
+.bannerText{
+    position: absolute; top: 90px; left: 40px; display: none;
+}
+.wrapper{
+    height: 100px;
+    width: 100%;
+}
+.spanAdjectives{
+    display: block;
+    height: 100%;
+    padding-left: 10px;
+    animation: spin_words 10s infinite;
+}
+.words{
+    overflow: hidden;
+}
+@keyframes spin_words{
+    10%{
+        transform: translateY(-112%);
+    }
+    25%{
+        transform: translateY(-100%);
+    }
+    35%{
+        transform: translateY(-212%);
+    }
+    50%{
+        transform: translateY(-200%);
+    }
+    60%{
+        transform: translateY(-312%);
+    }
+    75%{
+        transform: translateY(-300%);
+    }
+    85%{
+        transform: translateY(-412%);
+    }
+    100%{
+        transform: translateY(-400%);
+    }
+}
+@media (max-width:1210px){
+    h1{
+        font-size: 100px;
+    }
+    span{
+        font-size: 60px;
+    }
+}
+@media (max-width:1024px){
+    h1{
+        font-size: 80px;
+    }
+    span{
+        font-size: 40px;
+    }
+}
+@media (max-width:850px){
+    h1{
+        font-size: 60px;
+    }
+    span{
+        font-size: 20px;
+    }
+    .bannerText{
+        top: 60px;
+    }
+}
+@media (max-width:850px){
+    h1{
+        font-size: 40px;
+    }
+    span{
+        font-size: 18px;
+    }
+    .bannerText{
+        top: 30px;
+    }
+}
