--- a/css/style.scss
+++ b/css/style.scss
@@ -14,39 +14,45 @@ nav{
     }
 }
 footer{
-    background-color: $tertiary;
+    background-color: $background;
     color: $primary;
 }
 h1{
     color: $primary;
     -webkit-text-stroke: medium;
-    font-size: 120px;
+    font-size: 25px;
     letter-spacing: 3px;
 }
 h2{
     -webkit-text-stroke: medium;
-    font-size: 100px;
+    font-size: 25px;
     letter-spacing: 3px;
 }
 span{
     -webkit-text-stroke: 0;
-    font-size: 80px;
+    font-size: 20px;
 }
 .bannerText{
-    position: absolute; top: 90px; left: 40px; display: none;
+    display: none;
+    position: absolute; 
+    top: 0; 
+    left: 0;
+    right: 0;
 }
 .wrapper{
-    height: 100px;
+    height: 50px;
     width: 100%;
 }
 .spanAdjectives{
     display: block;
     height: 100%;
-    padding-left: 10px;
     animation: spin_words 10s infinite;
 }
 .words{
     overflow: hidden;
+}
+.ctnText{
+    text-align: left;
 }
 @keyframes spin_words{
     10%{
@@ -74,41 +80,72 @@ span{
         transform: translateY(-400%);
     }
 }
-@media (max-width:1210px){
-    h1{
-        font-size: 100px;
-    }
-    span{
-        font-size: 60px;
+@media (max-width:320px){
+   .ctnText{
+        text-align: center;
     }
 }
-@media (max-width:1024px){
-    h1{
-        font-size: 80px;
+@media (max-width:375px) and (min-width:321px){
+    .ctnText{
+        text-align: center;
     }
-    span{
+}
+@media (max-width:425px) and (min-width:376px){
+    .ctnText{
+        text-align: center;
+    }
+}
+@media (max-width:588px) and (min-width:426px){
+    .ctnText{
+        text-align: center;
+    }
+    h1,h2{
         font-size: 40px;
-    }
-}
-@media (max-width:850px){
-    h1{
-        font-size: 60px;
     }
     span{
         font-size: 20px;
     }
-    .bannerText{
-        top: 60px;
-    }
 }
-@media (max-width:850px){
-    h1{
-        font-size: 40px;
+@media (max-width:850px) and (min-width:588px){
+    h1,h2{
+        font-size: 60px;
     }
     span{
-        font-size: 18px;
+        font-size: 40px;
     }
-    .bannerText{
-        top: 30px;
+    .ctnText{
+        text-align: center;
     }
 }
+@media (max-width:1024px) and (min-width:850px){
+    h1,h2{
+        font-size: 80px;
+    }
+    span{
+        font-size: 60px;
+    }
+    .wrapper{
+        height: 70px;
+    }
+    .bannerText{
+        top: 80px;
+    }
+}
+@media (min-width:1025px){
+    h1{
+        font-size: 120px;
+    } 
+    h2{
+        font-size: 100px;
+    }
+    span{
+        font-size: 80px;
+    }
+    .bannerText{
+        top: 90px; left: 40px;
+    }
+    .wrapper{
+        height: 100px;
+    }
+}
+
