--- a/css/style.scss
+++ b/css/style.scss
@@ -49,7 +49,7 @@ nav{
 .bigus:hover{
     position:relative;
     top:-10px;
-
+}
 footer{
     background-color: $background;
     color: $primary;
