--- a/css/style.scss
+++ b/css/style.scss
@@ -25,7 +25,7 @@ h1{
     font-size: 25px;
     letter-spacing: 3px;
 }
-h2{
+h2,h3{
     -webkit-text-stroke: medium;
     font-size: 25px;
     letter-spacing: 3px;
