--- a/css/style.scss
+++ b/css/style.scss
@@ -44,7 +44,6 @@ nav{
         }
     }
 }
-
 .bigus {
     font-weight:900 !important;
 }
@@ -59,9 +58,15 @@ footer{
 .bannerText{
     display: none;
     position: absolute; 
-    top: 0; 
+    top: 175px; 
     left: 0;
     right: 0;
+    h1{
+        font-weight: 200;
+        padding-right:60px;
+        color:white;
+        font-size:6vw;
+    }
 }
 .wrapper{
     height: 50px;
@@ -69,6 +74,7 @@ footer{
 }
 .spanAdjectives{
     display: block;
+    font-size:6vw;
     height: 100%;
     animation: spin_words 10s infinite;
 }
@@ -77,7 +83,13 @@ footer{
 }
 .ctnText{
     text-align: left;
+    h2{
+        font-weight:900;
+        color:white;
+        font-size:6vw;
+    }
 }
+
 @keyframes spin_words{
     10%{
         transform: translateY(-112%);
@@ -134,6 +146,14 @@ footer{
             font-size:44px !important;
         }
     }
+    .bannerText{
+        h1{
+            font-size:44px !important;
+        }
+    }
+    .ctnText{
+        text-align: center;
+    }
 }
 //sm
 @media (min-width:576px) and (max-width:767px){
@@ -170,6 +190,14 @@ footer{
             font-size:8vw !important;
         }
     }
+    .bannerText{
+        h1{
+            font-size:8vw !important;
+        }
+    }
+    .ctnText{
+        text-align: center;
+    }
 }
 //md
 @media (min-width:768px) and (max-width:991px){
@@ -200,6 +228,15 @@ footer{
         max-width: 410px;
         /* max-width: 897px; */
         position: relative;
+    }
+    .spanAdjectives{
+        height: 100px;
+    }
+    .wrapper{
+        height: 50px;
+    }
+    .ctnText{
+        text-align: center;
     }
 }
 //lg above
@@ -232,5 +269,11 @@ footer{
         max-width: 410px;
         /* max-width: 897px; */
         position: relative;
+    }
+    .spanAdjectives{
+        height: 150px;
+    }
+    .wrapper{
+        height: 100px;
     }
 }
