--- a/css/style.scss
+++ b/css/style.scss
@@ -153,6 +153,10 @@ footer{
     }
     .ctnText{
         text-align: center;
+        h2,.spanAdjectives{
+            font-size:44px !important;
+        }
+        
     }
 }
 //sm
@@ -197,6 +201,9 @@ footer{
     }
     .ctnText{
         text-align: center;
+        h2,.spanAdjectives{
+            font-size:44px !important;
+        }
     }
 }
 //md
