--- a/css/index.css
+++ b/css/index.css
@@ -79,7 +79,7 @@ footer{
 }
 
 .ourTeam .i .c .wrap img {
-    width: 100%;
+   
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius: 5px;
     -moz-border-radius-topleft: 5px;
@@ -359,6 +359,9 @@ img.spectrum1 {
   width: 100%;
   height: auto;
 }
+h4.spectrum-h2 {
+   color:white;
+  }
 
 div a, a:hover {
   text-decoration: none;
@@ -425,7 +428,55 @@ h1 {
     color: black;
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 40px #fff;
   }
-
+  /*H2 */
+  h2 {
+    color: hsl(0, 0%, 28%);
+    font-size: 75px;
+    font-weight: bold;
+    font-family: monospace;
+    letter-spacing: 7px;
+    cursor: pointer;
+    text-transform: uppercase;
+  }
+  
+  h2 {
+    padding: 64px;
+    background: linear-gradient(to right, hsl(0, 0%, 30%) 0, hsl(0, 0%, 100%) 10%, hsl(0, 0%, 30%) 20%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 3s infinite linear;
+  }
+  
+  @keyframes shine {
+    0% {
+      background-position: 0;
+    }
+    60% {
+      background-position: 600px;
+    }
+    100% {
+      background-position: 600px;
+    }
+  }
+/* story id */
+#story{
+    background: url(https://previews.123rf.com/images/stockshoppe/stockshoppe1704/stockshoppe170400024/75997064-abstract-music-collage-background.jpg);
+    background-size: 40%;
+    background-position: 50% 50%;
+    -webkit-background-clip: text;
+    color: hsla(0, 0%, 0%, 0.08);
+    animation: zoomout 10s ease 500ms forwards;
+    font-size: 10vw;
+  }
+  
+  @keyframes zoomout {
+    from {
+      background-size: 40%;
+    }
+    to {
+      background-size: 10%;
+    }
+  }
 
   @media (min-width:576px) and (max-width:767px)
 {
