--- a/css/style.scss
+++ b/css/style.scss
@@ -50,6 +50,11 @@ nav{
     position:relative;
     top:-10px;
 }
+.display-pic {
+    object-fit:contain;
+    max-height: 420px;
+}
+
 footer{
     background-color: $background;
     color: $primary;
@@ -75,6 +80,38 @@ footer{
 }
 .ctnText{
     text-align: left;
+}
+.fadein-left{
+    -webkit-animation: floatLeft 1.5s  normal ease-out;
+    animation: floatLeft 1.5s   normal ease-out;
+}
+.fadein-right{
+    -webkit-animation: floatRight 1.5s  normal ease-out;
+    animation: floatRight 1.5s   normal ease-out;
+}
+.fadein-bottom{
+    -webkit-animation: floatBottom 1.5s  normal ease-out;
+    animation: floatBottom 1.5s   normal ease-out;
+}
+@-webkit-keyframes floatRight {
+    0% {
+        right: 500px;
+        opacity:0;
+    }
+    100% {
+        right: 0px;
+        opacity:1;
+    }
+}
+@keyframes floatRight {
+    0% {
+        right: 500px;
+        opacity:0;
+    }
+    100% {
+        right: 0px;
+        opacity:1;
+    }
 }
 @keyframes spin_words{
     10%{
@@ -105,9 +142,8 @@ footer{
 
 
 @media (max-width:575px){
-    #benben{
+    .display-pic{
         max-width:400px;
-        height:auto;
     }
     #item-desc{
         max-width:500px;        
@@ -135,9 +171,8 @@ footer{
 }
 //sm
 @media (min-width:576px) and (max-width:767px){
-    #benben{ 
+    .display-pic{ 
         max-width: 420px;
-        height:auto;
     }
     #store-item{
         max-width:520px;
@@ -171,9 +206,8 @@ footer{
 }
 //md
 @media (min-width:768px) and (max-width:991px){
-    #benben{
+    .display-pic{
         max-width:420px;
-        height:auto;
     }
     #store-item{
         max-width:400px;
@@ -202,9 +236,8 @@ footer{
 }
 //lg above
 @media(min-width:992px) {
-    #benben{
-        max-width:400px;
-        height:auto;
+    .display-pic{
+        max-width:500px;
     }
     #store-item{
         max-width:400px;
