--- a/css/style.scss
+++ b/css/style.scss
@@ -94,6 +94,9 @@ footer{
         font-size:6vw;
     }
 }
+.ctnBands{
+    box-shadow: 0px 15px 10px -15px hsl(0deg 0% 70%);
+}
 
 .fadein-left{
     -webkit-animation: floatLeft 1.5s  normal ease-out;
