--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,10 @@ footer {
   font-size: 6vw;
 }
 
+.ctnBands {
+  box-shadow: 0px 15px 10px -15px hsl(0deg, 0%, 70%);
+}
+
 .fadein-left {
   -webkit-animation: floatLeft 1.5s normal ease-out;
   animation: floatLeft 1.5s normal ease-out;
