added multiple functionalities
added sweetalert cdn
added footer.js
added footer and contact email validation
revamped design layout of booking.html from d-flex to grid

--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,7 @@ $secondary: #345B63;
 $tertiary: #152D35;
 $background: #112031;
 $font-family: "Red Hat Display", sans-serif;
+$fadevar: 20px;
 
 body{
     font-family: $font-family;
@@ -16,7 +17,6 @@ nav{
         background-color: $secondary;
     }
 }
-
 .smol{
     font-size: 13px;
 }
@@ -54,6 +54,16 @@ nav{
 .display-pic {
     object-fit:contain;
     max-height: 420px;
+}
+
+ #item-frame{   
+
+
+    #store-item{
+        object-fit:contain;
+        height:400px;
+        width:400px;
+    }
 }
 
 footer{
@@ -95,21 +105,43 @@ footer{
     }
 }
 
+
 .fadein-left{
-    -webkit-animation: floatLeft 1.5s  normal ease-out;
-    animation: floatLeft 1.5s   normal ease-out;
+    position:relative;
+    -webkit-animation: floatLeft 1s  normal ease-out;
+    animation: floatLeft 1s   normal ease-out;
 }
 .fadein-right{
-    -webkit-animation: floatRight 1.5s  normal ease-out;
-    animation: floatRight 1.5s   normal ease-out;
+    position:relative;
+    -webkit-animation: floatRight 1s  normal ease-out;
+    animation: floatRight 1s   normal ease-out;
 }
-.fadein-bottom{
-    -webkit-animation: floatBottom 1.5s  normal ease-out;
-    animation: floatBottom 1.5s   normal ease-out;
-}
+
+//fadein-right
 @-webkit-keyframes floatRight {
     0% {
-        right: 500px;
+        left: $fadevar;
+        opacity:0;
+    }
+    100% {
+        left: 0px;
+        opacity:1;
+    }
+}
+@keyframes floatRight {
+    0% {
+        left: $fadevar;
+        opacity:0;
+    }
+    100% {
+        left: 0px;
+        opacity:1;
+    }
+}
+//fadein-left
+@-webkit-keyframes floatLeft {
+    0% {
+        right: $fadevar;
         opacity:0;
     }
     100% {
@@ -117,13 +149,34 @@ footer{
         opacity:1;
     }
 }
-@keyframes floatRight {
+@keyframes floatLeft {
     0% {
-        right: 500px;
+        right: $fadevar;
         opacity:0;
     }
     100% {
         right: 0px;
+        opacity:1;
+    }
+}
+//fadein-bottom
+@-webkit-keyframes floatBottom {
+    0% {
+        top: $fadevar;
+        opacity:0;
+    }
+    100% {
+        top: 0px;
+        opacity:1;
+    }
+}
+@keyframes floatBottom {
+    0% {
+        top: $fadevar;
+        opacity:0;
+    }
+    100% {
+        top: 0px;
         opacity:1;
     }
 }
@@ -155,7 +208,7 @@ footer{
     }
 }
 
-
+//auto
 @media (max-width:575px){
     .display-pic{
         max-width:400px;
@@ -163,21 +216,7 @@ footer{
     #item-desc{
         max-width:500px;        
     }
-    #store-item{ 
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        margin: auto;
-        right: 0;
-    }
-    #item-frame{
-        min-height: 275px;
-        min-width: 260px;
-        max-width: 278px;
-        /* max-width: 897px; */
-        position: relative;
-    }
+
     #absolute{
         h1{
             font-size:44px !important;
@@ -192,17 +231,19 @@ footer{
         text-align: center;
         h2,.spanAdjectives{
             font-size:44px !important;
-        }
-        
+        }   
+    }
+    .fadein-left, .fadein-right{
+        position:relative;
+        -webkit-animation: floatBottom 1s  normal ease-out ;
+        animation: floatBottom 1s   normal ease-out ;
     }
 }
 //sm
 @media (min-width:576px) and (max-width:767px){
+    
     .display-pic{ 
         max-width: 420px;
-    }
-    #store-item{
-        max-width:520px;
     }
     #spacer{
         min-width:100px;
@@ -210,21 +251,6 @@ footer{
     #item-desc{
         max-width:500px;        
     }
-    #store-item{ 
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        margin: auto;
-        right: 0;
-    }
-    #item-frame{
-        min-height: 340px;
-        min-width: 330px;
-        max-width: 350px;
-        /* max-width: 897px; */
-        position: relative;
-    }
     #absolute{
         h1{
             font-size:8vw !important;
@@ -241,35 +267,22 @@ footer{
             font-size:44px !important;
         }
     }
+    .fadein-left, .fadein-right{
+        position:relative;
+        -webkit-animation: floatBottom 1s  normal ease-out;
+        animation: floatBottom 1s   normal ease-out;
+    }
 }
 //md
 @media (min-width:768px) and (max-width:991px){
     .display-pic{
         max-width:420px;
     }
-    #store-item{
-        max-width:400px;
-    }
     #spacer{
         min-width:100px;
     }
     #item-desc{
         max-width:300px;        
-    }
-    #store-item{ 
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        margin: auto;
-        right: 0;
-    }
-    #item-frame{
-        min-height: 340px;
-        min-width: 330px;
-        max-width: 410px;
-        /* max-width: 897px; */
-        position: relative;
     }
     .spanAdjectives{
         height: 100px;
@@ -280,15 +293,12 @@ footer{
     .ctnText{
         text-align: center;
     }
+    
 }
 //lg above
 @media(min-width:992px) {
     .display-pic{
         max-width:500px;
-    }
-    #store-item{
-        max-width:400px;
-        min-width:398px;
     }
     #spacer{ 
         min-width:100px;
@@ -296,25 +306,11 @@ footer{
     #item-desc{
         max-width:700px;        
     }
-    #store-item{ 
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        margin: auto;
-        right: 0;
-    }
-    #item-frame{
-        min-height: 400px;
-        min-width: 397px;
-        max-width: 410px;
-        /* max-width: 897px; */
-        position: relative;
-    }
     .spanAdjectives{
         height: 150px;
     }
     .wrapper{
         height: 100px;
     }
+
 }
