added js functionality when buying ticket
on purchase swa

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@ nav .active {
 
 .btn-sales {
   max-width: 140px;
+  background-color: #345B63;
+}
+
+.btn-purchase {
+  max-width: 200px;
+  background-color: #345B63;
 }
 
 #admission {
