--- a/css/style.scss
+++ b/css/style.scss
@@ -22,6 +22,11 @@ nav{
 }
 .btn-sales{
     max-width:140px;
+    background-color:$secondary;
+}
+.btn-purchase{
+    max-width:200px;
+    background-color:$secondary;
 }
 #admission{
     min-width:190px;
