--- a/css/style.scss
+++ b/css/style.scss
@@ -27,10 +27,12 @@ h3{
 .btn-sales{
     max-width:140px;
     background-color:$secondary;
+    border:none;
 }
 .btn-purchase{
     max-width:200px;
     background-color:$secondary;
+    border:none;
 }
 #admission{
     min-width:190px;
