Applied suggestions made by sir
All caps buttons
spacing between sweet alert button
changed buy now to reserve
changed purchase to reserve

--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,13 @@ nav .active {
 .btn-sales {
   max-width: 140px;
   background-color: #345B63;
+  border: none;
 }
 
 .btn-purchase {
   max-width: 200px;
   background-color: #345B63;
+  border: none;
 }
 
 #admission {
