--- a/css/style.scss
+++ b/css/style.scss
@@ -23,10 +23,12 @@ nav{
 .btn-sales{
     max-width:140px;
     background-color:$secondary;
+    border:none;
 }
 .btn-purchase{
     max-width:200px;
     background-color:$secondary;
+    border:none;
 }
 #admission{
     min-width:190px;
