--- a/css/style.scss
+++ b/css/style.scss
@@ -17,6 +17,7 @@ nav{
         background-color: $secondary;
     }
 }
+/*comment */
 h3{
     font-size: calc(1.3rem + 2.5vw);
     font-weight: 900;
