--- a/css/index.css
+++ b/css/index.css
@@ -69,7 +69,7 @@ footer {
     }
   }
   /*end story*/
-  /* developer*/
+ /* opm bands*/
   .baseBlock {
 	margin: 0px 0px 30px 0px;
 	padding: 0 0 15px 0px;
@@ -81,7 +81,7 @@ footer {
 	-o-transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 	transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
-
+ 
 .baseBlock:hover {
 	-webkit-transform: translate(0, -8px);
 	-moz-transform: translate(0, -8px);
@@ -90,6 +90,7 @@ footer {
 	transform: translate(0, -8px);
 	box-shadow: 0 40px 40px rgba(0, 0, 0, 0.2);
 }
+/* developer*/
   .ourTeam {
     background: #112031;
    
