--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
-@import url('http://fonts.cdnfonts.com/css/red-hat-display');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');
+
 $primary: #D4ECDD;
 $secondary: #345B63;
 $tertiary: #152D35;
