--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
-@import url("http://fonts.cdnfonts.com/css/red-hat-display");
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');
+
 body {
   font-family: "Red Hat Display", sans-serif;
   background-color: #112031;
