--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500&display=swap');
 
 $primary: #D4ECDD;
 $secondary: #345B63;
@@ -21,6 +21,9 @@ nav{
 /*comment */
 h3{
     font-size: calc(1.3rem + 2.5vw);
+    @media screen and (max-width:1000px) {
+        font-size:calc(1.3rem + .6vw);
+    }
     font-weight: 900;
 }
 .smol{
