update about us text

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,13 @@ nav .active {
   max-height: 420px;
 }
 
+#item-frame #store-item {
+  -o-object-fit: contain;
+     object-fit: contain;
+  height: 400px;
+  width: 400px;
+}
+
 footer {
   background-color: #112031;
   color: #D4ECDD;
@@ -103,23 +110,40 @@ footer {
 }
 
 .fadein-left {
-  -webkit-animation: floatLeft 1.5s normal ease-out;
-  animation: floatLeft 1.5s normal ease-out;
+  position: relative;
+  -webkit-animation: floatLeft 1s normal ease-out;
+  animation: floatLeft 1s normal ease-out;
 }
 
 .fadein-right {
-  -webkit-animation: floatRight 1.5s normal ease-out;
-  animation: floatRight 1.5s normal ease-out;
-}
-
-.fadein-bottom {
-  -webkit-animation: floatBottom 1.5s normal ease-out;
-  animation: floatBottom 1.5s normal ease-out;
+  position: relative;
+  -webkit-animation: floatRight 1s normal ease-out;
+  animation: floatRight 1s normal ease-out;
 }
 
 @-webkit-keyframes floatRight {
   0% {
-    right: 500px;
+    left: 20px;
+    opacity: 0;
+  }
+  100% {
+    left: 0px;
+    opacity: 1;
+  }
+}
+@keyframes floatRight {
+  0% {
+    left: 20px;
+    opacity: 0;
+  }
+  100% {
+    left: 0px;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes floatLeft {
+  0% {
+    right: 20px;
     opacity: 0;
   }
   100% {
@@ -127,13 +151,33 @@ footer {
     opacity: 1;
   }
 }
-@keyframes floatRight {
+@keyframes floatLeft {
   0% {
-    right: 500px;
+    right: 20px;
     opacity: 0;
   }
   100% {
     right: 0px;
+    opacity: 1;
+  }
+}
+@-webkit-keyframes floatBottom {
+  0% {
+    top: 20px;
+    opacity: 0;
+  }
+  100% {
+    top: 0px;
+    opacity: 1;
+  }
+}
+@keyframes floatBottom {
+  0% {
+    top: 20px;
+    opacity: 0;
+  }
+  100% {
+    top: 0px;
     opacity: 1;
   }
 }
@@ -196,21 +240,6 @@ footer {
   #item-desc {
     max-width: 500px;
   }
-  #store-item {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    right: 0;
-  }
-  #item-frame {
-    min-height: 275px;
-    min-width: 260px;
-    max-width: 278px;
-    /* max-width: 897px; */
-    position: relative;
-  }
   #absolute h1 {
     font-size: 44px !important;
   }
@@ -223,13 +252,15 @@ footer {
   .ctnText h2, .ctnText .spanAdjectives {
     font-size: 44px !important;
   }
+  .fadein-left, .fadein-right {
+    position: relative;
+    -webkit-animation: floatBottom 1s normal ease-out;
+    animation: floatBottom 1s normal ease-out;
+  }
 }
 @media (min-width: 576px) and (max-width: 767px) {
   .display-pic {
     max-width: 420px;
-  }
-  #store-item {
-    max-width: 520px;
   }
   #spacer {
     min-width: 100px;
@@ -237,21 +268,6 @@ footer {
   #item-desc {
     max-width: 500px;
   }
-  #store-item {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    right: 0;
-  }
-  #item-frame {
-    min-height: 340px;
-    min-width: 330px;
-    max-width: 350px;
-    /* max-width: 897px; */
-    position: relative;
-  }
   #absolute h1 {
     font-size: 8vw !important;
   }
@@ -264,34 +280,21 @@ footer {
   .ctnText h2, .ctnText .spanAdjectives {
     font-size: 44px !important;
   }
+  .fadein-left, .fadein-right {
+    position: relative;
+    -webkit-animation: floatBottom 1s normal ease-out;
+    animation: floatBottom 1s normal ease-out;
+  }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .display-pic {
     max-width: 420px;
-  }
-  #store-item {
-    max-width: 400px;
   }
   #spacer {
     min-width: 100px;
   }
   #item-desc {
     max-width: 300px;
-  }
-  #store-item {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    right: 0;
-  }
-  #item-frame {
-    min-height: 340px;
-    min-width: 330px;
-    max-width: 410px;
-    /* max-width: 897px; */
-    position: relative;
   }
   .spanAdjectives {
     height: 100px;
@@ -307,30 +310,11 @@ footer {
   .display-pic {
     max-width: 500px;
   }
-  #store-item {
-    max-width: 400px;
-    min-width: 398px;
-  }
   #spacer {
     min-width: 100px;
   }
   #item-desc {
     max-width: 700px;
-  }
-  #store-item {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    right: 0;
-  }
-  #item-frame {
-    min-height: 400px;
-    min-width: 397px;
-    max-width: 410px;
-    /* max-width: 897px; */
-    position: relative;
   }
   .spanAdjectives {
     height: 150px;
