--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ nav .active {
   background-color: #345B63;
 }
 
+/*comment */
 h3 {
   font-size: calc(1.3rem + 2.5vw);
   font-weight: 900;
@@ -322,6 +323,9 @@ footer {
   .ctnText {
     text-align: center;
   }
+  .benbenImage {
+    max-width: 370px;
+  }
 }
 @media (min-width: 992px) {
   .display-pic {
@@ -338,5 +342,9 @@ footer {
   }
   .wrapper {
     height: 100px;
+  }
+  .benbenImage {
+    min-width: 370px;
+    max-width: 500px;
   }
 }/*# sourceMappingURL=style.css.map */
