--- a/css/style.scss
+++ b/css/style.scss
@@ -309,7 +309,9 @@ footer{
     .ctnText{
         text-align: center;
     }
-    
+    .benbenImage{
+        max-width: 370px;
+    }
 }
 //lg above
 @media(min-width:992px) {
@@ -328,5 +330,8 @@ footer{
     .wrapper{
         height: 100px;
     }
-
+    .benbenImage{
+        min-width: 370px;
+        max-width: 500px;
+    }
 }
