--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,69 @@ body {
   color: white;
 }
 
+.overlay {
+  background-color: #000000;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 99;
+  opacity: 0.8;
+}
+
+.loader {
+  width: 100px;
+  height: 50px;
+  margin: auto;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 100;
+  transform-origin: bottom center;
+  -webkit-animation: rotate 2s linear infinite;
+          animation: rotate 2s linear infinite;
+}
+.loader .circle {
+  display: inline-block;
+  background-color: #D4ECDD;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  margin: -10px;
+  transform: scale(0);
+  -webkit-animation: grow 1.5s infinite;
+          animation: grow 1.5s infinite;
+  animation-direction: alternate-reverse;
+}
+.loader .circle:nth-child(2) {
+  background-color: white;
+  -webkit-animation-delay: 0.75s;
+          animation-delay: 0.75s;
+}
+
+@-webkit-keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes grow {
+  50% {
+    transform: scale(1);
+  }
+}
+@keyframes grow {
+  50% {
+    transform: scale(1);
+  }
+}
 nav .active {
   background-color: #345B63;
 }
