--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,54 @@ body{
     color: $primary;
     color:white;
 }
+.overlay{
+    background-color: #000000;
+    width:100%;
+    height:100vh;
+    position:fixed;
+    z-index:99;
+    opacity:0.8;
+}
+.loader{
+    width:100px;
+    height:50px;
+    margin:auto;
+    position:fixed;
+    top:0;
+    bottom:0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 100;
+    transform-origin: bottom center;
+    animation: rotate 2s linear infinite;
+    .circle{
+        display:inline-block;
+        background-color:$primary;
+        height:40px;
+        width:40px;
+        border-radius:50%;   
+        margin:-10px;
+        transform:scale(0);
+        animation: grow 1.5s infinite;
+        animation-direction: alternate-reverse;
+    }
+    .circle:nth-child(2){
+        background-color:white;
+        animation-delay:0.75s;
+    }
+}
+@keyframes rotate {
+    to {
+        transform: rotate(360deg);
+    }
+}
+@keyframes grow {
+    50%{ 
+        transform: scale(1);
+    }
+}
+
 nav{
     .active {
         background-color: $secondary;
